# liquid-bot

./: .env.backup  .env.bak  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  Problems.md  README.md  STRUCTURE_COMPLIANCE_REPORT.md  Structure.md  build.rs
business-versions/: business_version_1.0.0.md
docs/: BALANCE_RESERVATION.md  CODE_FLOW.md  DRY_RUN_GUIDE.md  IDL_EXPLAINED.md  IDL_OWNERSHIP.md  MULTI_PROTOCOL_ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_QUICK_REFERENCE.md  PROFIT_CALCULATION.md  SLIPPAGE_CALIBRATION.md  STRUCT_VALIDATION_STATUS.md  TRANSACTION_FEE_VERIFICATION.md  WALLET_SETUP.md  business_version_1.0.0.md  solene.md
idl/: solend.json  solend_last_update_layout.json  solend_lending_market_layout.json  solend_obligation_layout.json  solend_reserve_layout.json  switchboard.json
scripts/: analyze_dry_run_logs.sh  check_oracle_option.sh  fetch_solend_idl.sh  find_and_test_obligation.sh  find_obligation.sh  find_obligation_account.sh  find_obligation_accounts.sh  find_obligation_for_test.sh  monitor_dry_run.sh  prod_check.sh  production_checklist.sh  run_dry_run.sh  test_discriminator.sh  test_obligation_discriminator.sh  test_obligation_with_known_account.sh  validate_all_critical_issues.sh  validate_reserve_structure.sh  verify_discriminator.sh
src/: analyzer.rs  balance_reservation.rs  business_version_1.0.0.md  config.rs  data_source.rs  domain.rs  event.rs  event_bus.rs  executor.rs  health.rs  jup.rs  kamino.rs  lending_trait.rs  lib.rs  liquidation_tx.rs  logger.rs  main.rs  math.rs  performance.rs  pipeline.rs  protocol.rs  quotes.rs  rate_limiter.rs  rpc_poller.rs  rpc_worker.rs  shutdown.rs  slippage_calibration.rs  solana_client.rs  solend.rs  startup_validation.rs  strategist.rs  tx_lock.rs  utils.rs  wallet.rs  ws_listener.rs
src/blockchain/: jito.rs  rpc_client.rs  transaction.rs  ws_client.rs
src/blockchain/ws_client/: client.rs  connection.rs  mod.rs  subscription.rs
src/core/: config.rs  config_groups.rs  error.rs  events.rs  mod.rs  registry.rs  types.rs
src/engine/: analyzer.rs  executor.rs  mod.rs  scanner.rs  validator.rs
src/engine/analyzer/: mod.rs  opportunity_calculator.rs  worker_manager.rs
src/engine/executor/: ata_cache.rs  mod.rs  tx_lock.rs  wsol_handler.rs
src/engine/validator/: mod.rs  validation_helpers.rs
src/oracle/: hermes.rs  mod.rs  pyth.rs  switchboard.rs  validation.rs
src/protocol/: mod.rs
src/protocol/oracle/: mod.rs  pyth.rs  switchboard.rs
src/protocol/solend/: accounts.rs  instructions.rs  mod.rs  reserve_cache.rs  types.rs
src/protocols/: jupiter_api.rs  oracle_helper.rs  reserve_helper.rs  reserve_validator.rs  solend.rs  solend_accounts.rs  solend_idl.rs  solend_idl.rs.bak  solend_reserve.rs
src/strategy/: balance_manager.rs  mod.rs  profit_calculator.rs  slippage_estimator.rs
src/strategy/balance_manager/: balance_cache.rs  balance_subscription.rs  cache.rs  mod.rs  reservation.rs
src/utils/: ata_manager.rs  cache.rs  dependency_validator.rs  error_helpers.rs  error_tracker.rs  helpers.rs  macros.rs  metrics.rs  mod.rs
tests/: README.md  integration_mainnet.rs  test_oracle_reading.rs
tools/solend-layout-dump/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+4 files in other folders)
