[package]
name = "liquid-bot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
borsh = "1.0"
borsh-derive = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.21"
spl-token = "4.0"
spl-associated-token-account = "2.3"
chrono = "0.4"
