[package]
name = "liquid-bot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.0"
solana-sdk = "2.0"
solana-program = "2.0"
borsh = "1.0"
borsh-derive = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.21"
spl-token = "6.0"
spl-associated-token-account = "4.0"
chrono = "0.4"
sha2 = "0.10"
# Switchboard On-Demand SDK (Solana 2.0 compatible)
# Using git repo with solana-v2 feature for Solana 2.0 compatibility
# Note: crates.io version (0.11.3) has Solana 2.0 compatibility issues, so using git repo
# Code includes alignment mismatch fallback handling in pipeline.rs:1636
switchboard-on-demand = { git = "https://github.com/switchboard-xyz/solana-sdk", branch = "main", default-features = false, features = ["client", "solana-v2"] }
rust_decimal = "1"
bytemuck = "1.24.0"
parking_lot = "0.12"
lazy_static = "1.4"
rand = "0.8"
# Pyth Network SDK for Pythnet v3 (current mainnet standard)
# Note: Legacy Pyth v2 parsing is kept in code for backward compatibility,
# but Pythnet v3 is now the standard format on mainnet
pyth-sdk-solana = "0.10"
# Solana System Interface (replaces deprecated system_program/system_instruction)
solana-system-interface = "2.0"
